--- a/etk/SConscript
+++ b/etk/SConscript
@@ -6,7 +6,8 @@
 # ********************************************************************
 import os
 
-Import('env')
+Import('appEnv')
+env=appEnv
 
 libs=[
     'libetk.a',
