--- a/gnuboy/SConscript
+++ b/gnuboy/SConscript
@@ -6,7 +6,8 @@
 # ********************************************************************
 import os
 
-Import('env')
+Import('appEnv')
+env=appEnv
 
 cflags='-DIS_LITTLE_ENDIAN  -DIS_LINUX -D_GNU_SOURCE=1 -D_REENTRANT '
 
@@ -52,7 +53,6 @@ libpath = [
     '../../eggs/libimage',
     '../../eggs/libjpeg',
     '../../eggs/libpng',
-    '../../eggs/libc/',
     '../../eggs/libzlib',
 
 ]
