--- a/mgba/SConscript
+++ b/mgba/SConscript
@@ -6,8 +6,8 @@
 # ********************************************************************
 import os
 
-Import('env')
-
+Import('appEnv')
+env=appEnv
 
 cflags = ' -DUSE_FILE32API '
 
