--- a/toybox/SConscript
+++ b/toybox/SConscript
@@ -6,9 +6,8 @@
 # ********************************************************************
 import os
 
-Import('env')
-
-
+Import('cliEnv')
+env=cliEnv
 
 source= [
     'main.c',
