--- a/watch/SConscript
+++ b/watch/SConscript
@@ -6,7 +6,8 @@
 # ********************************************************************
 import os
 
-Import('env')
+Import('appEnv')
+env=appEnv
 
 libs=[
     'liblvgl.a',
