--- a/xtrack/SConscript
+++ b/xtrack/SConscript
@@ -6,8 +6,8 @@
 # ********************************************************************
 import os
 
-Import('cppEnv')
-cppEnv = cppEnv.Clone()
+Import('cppCliEnv')
+cppEnv = cppCliEnv.Clone()
 
 cflags = ' -D_POSIX_C_SOURCE -DLV_LVGL_H_INCLUDE_SIMPLE=1  '  # -DIS_LITTLE_ENDIAN
 
