--- a/sdl/SConscript
+++ b/sdl/SConscript
@@ -7,9 +7,9 @@
 import os
 
 Import('env')
-Import('cppEnv')
+Import('appEnv')
 
-env = cppEnv.Clone()
+env = appEnv.Clone()
 
 cflags = ' -DIS_LITTLE_ENDIAN  -DIS_LINUX  -D_REENTRANT  -DHAVE_STD_STRING_VIEW '
 
