--- a/resource/gmenu2x/skins/480x272/Default/skin.conf
+++ b/resource/gmenu2x/skins/480x272/Default/skin.conf
@@ -5,8 +5,11 @@ selectionBg=#ffffff80
 messageBoxBg=#00000080
 messageBoxSelection=#fffffff80
 bottomBarBg=#ffffff80
-topBarHeight=60
-bottomBarHeight=21
-linkHeight=50
-linkWidth=90
-fontsize=14
+topBarHeight=54
+bottomBarHeight=20
+linkHeight=38
+linkWidth=56
+fontsize=12
+topBarBgUseColor=1
+bottomBarBgUseColor=1
+hideLR=1
